bluejay-validator/tests/snapshots/definition_integration_test__error@enum_value_definition_uniqueness.graphql.snap
---
source: bluejay-validator/tests/definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/definition/error/enum_value_definition_uniqueness.graphql
---
Error: Multiple enum value definitions named `VARIANT_1`
   ╭─[ enum_value_definition_uniqueness.graphql:1:1 ]
   │
 2 │   VARIANT_1
   │   ────┬────  
   │       ╰────── Enum value definition with name `VARIANT_1`
   │ 
 4 │   VARIANT_1
   │   ────┬────  
   │       ╰────── Enum value definition with name `VARIANT_1`
───╯
